<resources>
    <string-array name="tasks_array">
        <item>Time</item>
        <item>Status</item>
        <item>Priority</item>
    </string-array>
    <string-array name="category_array">
        <item>Cleaning</item>
        <item>Electricity</item>
        <item>Computers</item>
        <item>General</item>
        <item>Other</item>
    </string-array>
    <string-array name="location_array">
        <item>Room 200</item>
        <item>Room 201</item>
        <item>Room 202</item>
        <item>Room 203</item>
        <item>Room 204</item>
        <item>Room 205</item>
        <item>Room 300</item>
        <item>Room 301</item>
        <item>Room 302</item>
        <item>Room 303</item>
        <item>Room 304</item>
        <item>Room 305</item>
        <item>Room 400</item>
        <item>Room 401</item>
        <item>Room 402</item>
    </string-array>
    <string name="app_name">TasKing</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_up_msg">Create a\n free account</string>
    <string name="log_in_msg">Login to\n your account</string>
    <string name="forgot"><u>Forgot password?</u></string>
    <string name="team_view">TEAM</string>
    <string name="create_team"><b>Create</b> a Team\n to go <b>TasKing</b> with</string>
    <string name="user_not_found">User not found</string>
    <string name="wrong_password">Wrong password</string>
    <string name="arrow">Arrow</string>
    <string name="done">DONE</string>
    <string name="status_done">Done</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="team_name">Team Name</string>
    <string name="team_members">Team Members</string>
    <string name="send_invites">Send invites</string>
    <string name="waiting">Waiting</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="no_tasks">There are no\n tasks on your list!\n <b>Create</b> a New Task</string>
    <string name="task_name">Task Name</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="assign_member">Assign\nMember</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="sort_by">Sort By</string>
    <string name="due_time">Due Time</string>
    <string name="status">Status</string>
    <string name="members">MEMBERS</string>
    <string name="show_members_list">Show Members List</string>
    <string name="add_member">ADD MEMBER</string>
    <string name="settings">SETTINGS</string>
    <string name="log_out">Log Out</string>
    <string name="about">About</string>
    <string name="in_progress">In Progress</string>
    <string name="accept_status">Accept Status</string>
    <string name="task_status">Task Status</string>
    <string name="add_photo">Add Photo</string>
    <string name="my_team">My team</string>
    <string name="member_name">Name</string>
    <string name="email">E-mail</string>
    <string name="Add">Add</string>
    <string name="phone">Phone number</string>
    <string name="back">BACK</string>
    <string name="create_task">There are no\n tasks on your list!</string>
    <string name="create_waiting_task">There are no Waiting\n tasks on your list!</string>
    <string name="refresh_task">There are no\n tasks on your list!</string>
    <string name="refresh_waiting_task">There are no Waiting\ntasks on your list!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="delete">DELETE</string>
    <string name="update">Upadte interval</string>
    <string name="menu_refresh">Refresh</string>
    <string name="urgent">Urgent</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="delete_ic">delete icon</string>
    <string name="go">GO</string>
    <string name="task_photo">Photo</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_about">About: TasKing v1.0</string>
    <string name="nav_names">Gregory K / Dassi R / Arel G</string>
    <string name="nav_show_member">Show Memebers List</string>
    <string name="nav_add_member">Add Member</string>
    <string name="edit">edit</string>
    <string name="team_name_title">Team Name</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="show_task">Show task</string>
    <string name="min">min</string>
    <string name="Rejected">Rejected</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
