<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_members_list" android:icon="@drawable/ic_visibility_black_24dp"
            android:title="@string/nav_show_member" />
        <item android:id="@+id/nav_add_member" android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/nav_add_member" />
        <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item android:id="@+id/nav_logout" android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/nav_logout" />
        <item android:id="@+id/nav_about" android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" android:enabled="false" />
        <item android:id="@+id/nav_us"
            android:title="@string/nav_names" android:enabled="false"/>
    </group>
</menu>