<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tasking.AddTaskActivity">

   <!-- <include layout="@layout/drawer_layout"/> -->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:id="@+id/txt_task_name"
        android:textSize="25sp"
        android:textColor="@color/grey"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:id="@+id/txt_category"
        android:textSize="25sp"
        android:textColor="@color/grey"
        android:layout_below="@+id/txt_task_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:id="@+id/txt_priority"
        android:textSize="25sp"
        android:textColor="@color/grey"
        android:layout_above="@+id/txt_location"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/txt_location"
        android:textSize="25sp"
        android:textColor="@color/grey"
        android:layout_above="@+id/txt_date"
        android:layout_alignEnd="@+id/txt_priority" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/txt_date"
        android:textSize="25sp"
        android:textColor="@color/grey"
        android:layout_above="@+id/txt_time"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/txt_time"
        android:textSize="25sp"
        android:textColor="@color/grey"
        android:layout_above="@+id/txt_assign_member"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assign_member"
        android:id="@+id/txt_assign_member"
        android:textSize="25sp"
        android:textColor="@color/grey"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_task_name"
        android:hint="@string/task_name"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txt_assign_member" />


</RelativeLayout>
