<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tasking.AddMemberActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
       android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:text="@string/team_view" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/team_name_wrapper"
        android:layout_alignParentStart="true"
        android:layout_below="@id/my_toolbar"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_name"
            android:id="@+id/txt_team_name"
            android:textSize="25sp"
            android:textColor="@color/grey"
            android:layout_alignBottom="@+id/edit_team_name"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:lines="1"
            android:inputType="none"
            android:id="@+id/edit_team_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <LinearLayout
        android:text = ""
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/team_name_wrapper" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/team_members_wrapper"
        android:layout_alignParentStart="true"
        android:layout_below="@id/team_name_wrapper"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_members"
            android:id="@+id/textView3"
            android:textSize="25sp"
            android:textColor="@color/grey"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add"
            android:textStyle="bold"
            android:id="@+id/add_btn"
            android:layout_alignParentTop="true"
            android:textSize="25sp"
            android:layout_toEndOf="@+id/textView3"
            android:layout_marginStart="48dp"
            android:onClick="addMember" />

    </RelativeLayout>

    <LinearLayout
        android:text = ""
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/team_members_wrapper" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_members_wrapper"
        android:layout_below="@+id/team_members_wrapper"
        android:layout_above="@+id/txt_done"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="25sp"
            android:id="@+id/txt_member_email"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="25sp"
            android:id="@+id/txt_member_phone"
            android:layout_below="@+id/txt_member_email"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/edit_member_email"
            android:singleLine="true"
            android:lines="1"
            android:textSize="25sp"
            android:layout_above="@+id/txt_member_phone"
            android:layout_alignStart="@+id/edit_member_phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:singleLine="true"
            android:lines="1"
            android:textSize="25sp"
            android:id="@+id/edit_member_phone"
            android:layout_alignBottom="@+id/txt_member_phone"
            android:layout_toEndOf="@+id/txt_member_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_member"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/add_member_btn"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp" />
    </RelativeLayout>

    <LinearLayout
        android:text = ""
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/edit_members_wrapper" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_invites"
        android:id="@+id/txt_done"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/darkBlue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="done"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textStyle="bold"
        android:id="@+id/txt_back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="back"
        android:nestedScrollingEnabled="false"
        android:textColor="@color/darkBlue"
        android:textSize="25sp" />
</RelativeLayout>
