<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tasking.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:text="@string/app_name" />

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@drawable/border"
        android:layout_below="@+id/my_toolbar"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="22sp"
            android:id="@+id/txt_update_interval"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp" />

        <EditText
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:singleLine="true"
            android:lines="1"
            android:id="@+id/number_curr_interval"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/txt_update_interval"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:textSize="22sp"
            android:id="@+id/txt_min"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/number_curr_interval" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/txt_settings_done"
            android:onClick="save"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/darkBlue"
            android:textSize="18sp"
            android:layout_centerVertical="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:background="@color/grey"
            android:text="" />
    </RelativeLayout>

</RelativeLayout>
